--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -1,18 +1,18 @@
 .arrow {
   width: 26px;
-  margin: 20px 0 0 21px;
-  position: absolute;
+  margin-left: 21px;
+  /* margin: 20px 0 0 21px; */
+  /* position: absolute; */
 }
 
-h2 {
+/* h2 {
   font-size: 32px;
   font-weight: 500;
   line-height: 39px;
   text-align: center;
   color: #262626;
-  margin-top: 60px;
   margin-bottom: 20px;
-}
+} */
 
 #new_user {
   display: flex;
